--- a/TP2/parte_1_rgb_to_yiq.ipynb
+++ b/TP2/parte_1_rgb_to_yiq.ipynb
@@ -27,7 +27,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "e718732b466f40229977e979991d44aa": {
+        "ef3b2e6f5fa44ba1a64b7750f2fb8568": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "VBoxModel",
           "model_module_version": "1.5.0",
@@ -42,16 +42,16 @@
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "box_style": "",
-            "layout": "IPY_MODEL_eeac0828eac04eae8a499997783b6147",
+            "layout": "IPY_MODEL_eb5b59ff29ed4b308639fc2503bb3404",
             "_model_module": "@jupyter-widgets/controls",
             "children": [
-              "IPY_MODEL_55c91f108e074a898f316e8a27cd17a4",
-              "IPY_MODEL_759b0f846a934d93915cca1b19e2c183",
-              "IPY_MODEL_efc0bb45d46741b5935fdb8c5a45c6b5"
+              "IPY_MODEL_ebed3fab630e402c86817145f6dc483f",
+              "IPY_MODEL_7715928cb8394652ac8f51c4a2366cf8",
+              "IPY_MODEL_ef052d76d27a4764b980bb2eed9eb495"
             ]
           }
         },
-        "eeac0828eac04eae8a499997783b6147": {
+        "eb5b59ff29ed4b308639fc2503bb3404": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -103,13 +103,13 @@
             "left": null
           }
         },
-        "55c91f108e074a898f316e8a27cd17a4": {
+        "ebed3fab630e402c86817145f6dc483f": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatSliderModel",
           "model_module_version": "1.5.0",
           "state": {
             "_view_name": "FloatSliderView",
-            "style": "IPY_MODEL_a957a3eb77d34634a04e3a008cb89d76",
+            "style": "IPY_MODEL_65c5f53e4f0449f99cb5470f2bc8dbe1",
             "_dom_classes": [],
             "description": "alpha",
             "step": 0.1,
@@ -128,16 +128,16 @@
             "description_tooltip": null,
             "readout": true,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_ca678b03122d427f8d8a1ed1d73b70ad"
+            "layout": "IPY_MODEL_53a11037a4c34f5694beaaa15a37c5d6"
           }
         },
-        "759b0f846a934d93915cca1b19e2c183": {
+        "7715928cb8394652ac8f51c4a2366cf8": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatSliderModel",
           "model_module_version": "1.5.0",
           "state": {
             "_view_name": "FloatSliderView",
-            "style": "IPY_MODEL_a3616b5cc34f4a4789012859bbc69e28",
+            "style": "IPY_MODEL_0d789e434dcd40888f18360e33bf811f",
             "_dom_classes": [],
             "description": "beta",
             "step": 0.1,
@@ -156,10 +156,10 @@
             "description_tooltip": null,
             "readout": true,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_28376ab88b2f40e784edeb2c7aa289b0"
+            "layout": "IPY_MODEL_a18dfaff4dd74a38a2e1f3c17ec38d44"
           }
         },
-        "efc0bb45d46741b5935fdb8c5a45c6b5": {
+        "ef052d76d27a4764b980bb2eed9eb495": {
           "model_module": "@jupyter-widgets/output",
           "model_name": "OutputModel",
           "model_module_version": "1.0.0",
@@ -183,7 +183,7 @@
                 "output_type": "display_data",
                 "data": {
                   "application/vnd.jupyter.widget-view+json": {
-                    "model_id": "7110aa00b43a4ee79762adc807109420",
+                    "model_id": "d30f2e4f110d47908c134c4110b99e4b",
                     "version_minor": 0,
                     "version_major": 2
                   },
@@ -195,7 +195,7 @@
                 "output_type": "display_data",
                 "data": {
                   "application/vnd.jupyter.widget-view+json": {
-                    "model_id": "6f3336c2efc84d019c91c7881272ec84",
+                    "model_id": "18eb31a8bb7f46ea8e0d202d24132f1f",
                     "version_minor": 0,
                     "version_major": 2
                   },
@@ -208,11 +208,11 @@
             "_model_module_version": "1.0.0",
             "_view_count": null,
             "_view_module_version": "1.0.0",
-            "layout": "IPY_MODEL_b8c00c2f2a1d4d58af8a67b5028b8384",
+            "layout": "IPY_MODEL_bf6c62c46d634c0d8c5497215d7a1f7a",
             "_model_module": "@jupyter-widgets/output"
           }
         },
-        "a957a3eb77d34634a04e3a008cb89d76": {
+        "65c5f53e4f0449f99cb5470f2bc8dbe1": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "SliderStyleModel",
           "model_module_version": "1.5.0",
@@ -228,7 +228,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "ca678b03122d427f8d8a1ed1d73b70ad": {
+        "53a11037a4c34f5694beaaa15a37c5d6": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -280,7 +280,7 @@
             "left": null
           }
         },
-        "a3616b5cc34f4a4789012859bbc69e28": {
+        "0d789e434dcd40888f18360e33bf811f": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "SliderStyleModel",
           "model_module_version": "1.5.0",
@@ -296,7 +296,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "28376ab88b2f40e784edeb2c7aa289b0": {
+        "a18dfaff4dd74a38a2e1f3c17ec38d44": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -348,7 +348,7 @@
             "left": null
           }
         },
-        "b8c00c2f2a1d4d58af8a67b5028b8384": {
+        "bf6c62c46d634c0d8c5497215d7a1f7a": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -400,13 +400,13 @@
             "left": null
           }
         },
-        "7110aa00b43a4ee79762adc807109420": {
+        "d30f2e4f110d47908c134c4110b99e4b": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonModel",
           "model_module_version": "1.5.0",
           "state": {
             "_view_name": "ButtonView",
-            "style": "IPY_MODEL_56472dc06a1c4de5aad7bd965bc40881",
+            "style": "IPY_MODEL_2d988623191444b595982250f3f75bd8",
             "_dom_classes": [],
             "description": "SAVE IMAGE",
             "_model_name": "ButtonModel",
@@ -417,12 +417,12 @@
             "_view_count": null,
             "disabled": false,
             "_view_module_version": "1.5.0",
-            "layout": "IPY_MODEL_3257c2791e9c45ce9cbdd6d67fb81921",
+            "layout": "IPY_MODEL_d430de4e2c1849028f184cdf837d313c",
             "_model_module": "@jupyter-widgets/controls",
             "icon": ""
           }
         },
-        "56472dc06a1c4de5aad7bd965bc40881": {
+        "2d988623191444b595982250f3f75bd8": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonStyleModel",
           "model_module_version": "1.5.0",
@@ -438,7 +438,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "3257c2791e9c45ce9cbdd6d67fb81921": {
+        "d430de4e2c1849028f184cdf837d313c": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -490,7 +490,7 @@
             "left": null
           }
         },
-        "6f3336c2efc84d019c91c7881272ec84": {
+        "18eb31a8bb7f46ea8e0d202d24132f1f": {
           "model_module": "@jupyter-widgets/output",
           "model_name": "OutputModel",
           "model_module_version": "1.0.0",
@@ -504,11 +504,11 @@
             "_model_module_version": "1.0.0",
             "_view_count": null,
             "_view_module_version": "1.0.0",
-            "layout": "IPY_MODEL_db427eada42c44408adba0156f33bf89",
+            "layout": "IPY_MODEL_f62cb1f9db134b3a9218928b4cb48372",
             "_model_module": "@jupyter-widgets/output"
           }
         },
-        "db427eada42c44408adba0156f33bf89": {
+        "f62cb1f9db134b3a9218928b4cb48372": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -617,7 +617,7 @@
         "from IPython.display import display"
       ],
       "id": "856c924b",
-      "execution_count": 30,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -637,14 +637,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "05b705e1-20dc-4362-f68d-c5b35e2bc69f"
+        "outputId": "9fb01e55-f6c1-4ada-f3f2-4595176eb1d2"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
       "id": "MW5Z8JdryNkf",
-      "execution_count": 31,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -692,7 +692,7 @@
         "  display(my_button,out)\n"
       ],
       "id": "QB_TiYyCDd1l",
-      "execution_count": 71,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -713,7 +713,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 656
         },
-        "outputId": "b64c0029-d3ff-4583-f412-3b78a1c9ca44"
+        "outputId": "3538a6f4-ec02-4185-d94a-2e111aedc40c"
       },
       "source": [
         "path = '/content/drive/MyDrive/Cursos_Posgrado/Procesamiento_Imagenes-UNS/TP2/isla.jpg' #Path en Drive donde se encuentra la imagen\n",
@@ -727,7 +727,7 @@
         "plt.show()"
       ],
       "id": "fb99ab40",
-      "execution_count": 34,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -816,7 +816,7 @@
         "    return RGB"
       ],
       "id": "9972356a",
-      "execution_count": 35,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -837,7 +837,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 622
         },
-        "outputId": "fcf2d104-a619-4ad8-aa6d-d8b42be982a5"
+        "outputId": "1a6a1a65-032f-40cb-d1b9-cd4ba5c7e1c4"
       },
       "source": [
         "YIQ = rgb2yiq(image)\n",
@@ -849,7 +849,7 @@
         "plt.show()"
       ],
       "id": "1528cc65",
-      "execution_count": 36,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -992,7 +992,7 @@
         "  return YIQ_mod"
       ],
       "id": "d46ef792",
-      "execution_count": 43,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -1023,27 +1023,27 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 634,
+          "height": 651,
           "referenced_widgets": [
-            "e718732b466f40229977e979991d44aa",
-            "eeac0828eac04eae8a499997783b6147",
-            "55c91f108e074a898f316e8a27cd17a4",
-            "759b0f846a934d93915cca1b19e2c183",
-            "efc0bb45d46741b5935fdb8c5a45c6b5",
-            "a957a3eb77d34634a04e3a008cb89d76",
-            "ca678b03122d427f8d8a1ed1d73b70ad",
-            "a3616b5cc34f4a4789012859bbc69e28",
-            "28376ab88b2f40e784edeb2c7aa289b0",
-            "b8c00c2f2a1d4d58af8a67b5028b8384",
-            "7110aa00b43a4ee79762adc807109420",
-            "56472dc06a1c4de5aad7bd965bc40881",
-            "3257c2791e9c45ce9cbdd6d67fb81921",
-            "6f3336c2efc84d019c91c7881272ec84",
-            "db427eada42c44408adba0156f33bf89"
+            "ef3b2e6f5fa44ba1a64b7750f2fb8568",
+            "eb5b59ff29ed4b308639fc2503bb3404",
+            "ebed3fab630e402c86817145f6dc483f",
+            "7715928cb8394652ac8f51c4a2366cf8",
+            "ef052d76d27a4764b980bb2eed9eb495",
+            "65c5f53e4f0449f99cb5470f2bc8dbe1",
+            "53a11037a4c34f5694beaaa15a37c5d6",
+            "0d789e434dcd40888f18360e33bf811f",
+            "a18dfaff4dd74a38a2e1f3c17ec38d44",
+            "bf6c62c46d634c0d8c5497215d7a1f7a",
+            "d30f2e4f110d47908c134c4110b99e4b",
+            "2d988623191444b595982250f3f75bd8",
+            "d430de4e2c1849028f184cdf837d313c",
+            "18eb31a8bb7f46ea8e0d202d24132f1f",
+            "f62cb1f9db134b3a9218928b4cb48372"
           ]
         },
         "id": "mhodyNRkcTTU",
-        "outputId": "af5fd79d-8bce-4d3c-e5d5-e05164fccbf0"
+        "outputId": "7cebad11-274e-425b-de0b-dbd4c36def50"
       },
       "source": [
         "path_save = '/content/drive/MyDrive/Cursos_Posgrado/Procesamiento_Imagenes-UNS/TP2/imagen_modificada.jpg' #Path completo en Drive donde se guardará la imagen\n",
@@ -1052,12 +1052,13 @@
         "YIQ = rgb2yiq(image)\n",
         "\n",
         "print(\"Para modificar la luminancia y saturación, seleccione un valor para alfa y beta respectivamente en la siguiente barra deslizante:\")\n",
-        "print(\"NOTA: Dependiendo de la capacidad de cómputo de la PC puede demorar unos segundos\\n\")\n",
+        "print(\"NOTA: Dependiendo de la capacidad de cómputo de la PC puede demorar unos segundos\")\n",
+        "print('Para guardar la imagen modificada, modifique la ruta de guardado y presione el botón \"SAVE IMAGE\"\\n')\n",
         "\n",
         "widgets.interactive(mod_sat_lum, alpha=(0, 3, 0.1), beta=(0, 3, 0.1), YIQ=widgets.fixed(YIQ), graph=widgets.fixed(1), full_path=widgets.fixed(path_save))  "
       ],
       "id": "mhodyNRkcTTU",
-      "execution_count": 70,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1065,6 +1066,7 @@
           "text": [
             "Para modificar la luminancia y saturación, seleccione un valor para alfa y beta respectivamente en la siguiente barra deslizante:\n",
             "NOTA: Dependiendo de la capacidad de cómputo de la PC puede demorar unos segundos\n",
+            "Para guardar la imagen modificada, modifique la ruta de guardado y presione el botón \"SAVE IMAGE\"\n",
             "\n"
           ]
         },
@@ -1072,7 +1074,7 @@
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "e718732b466f40229977e979991d44aa",
+              "model_id": "ef3b2e6f5fa44ba1a64b7750f2fb8568",
               "version_minor": 0,
               "version_major": 2
             },
@@ -1090,7 +1092,7 @@
         "id": "mk-Kg9YIgJTA"
       },
       "source": [
-        "### Para sacar conclusiones se toman dos valores para alfa y beta respectivamente, y veremos el resultado"
+        "### Para sacar conclusiones se toman dos valores para alfa y beta respectivamente\n"
       ],
       "id": "mk-Kg9YIgJTA"
     },
@@ -1112,7 +1114,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 283
         },
-        "outputId": "ceba2852-c1c4-4356-8b43-8fc81f557a1f"
+        "outputId": "15294c7a-dd4d-489b-89ff-16351fe18256"
       },
       "source": [
         "YIQ = rgb2yiq(image)\n",
@@ -1143,7 +1145,7 @@
         "plt.show()"
       ],
       "id": "9d8306d2",
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1187,7 +1189,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 283
         },
-        "outputId": "d560c16b-3186-4e2c-d451-396529697659"
+        "outputId": "499612c8-7d13-4d76-9465-93ff658683b4"
       },
       "source": [
         "YIQ = rgb2yiq(image)\n",
@@ -1221,7 +1223,7 @@
         "plt.show()"
       ],
       "id": "6ff2da88",
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
