--- a/TP2/parte_1_rgb_to_yiq.ipynb
+++ b/TP2/parte_1_rgb_to_yiq.ipynb
@@ -617,7 +617,7 @@
         "from IPython.display import display"
       ],
       "id": "856c924b",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -644,7 +644,7 @@
         "drive.mount('/content/drive')"
       ],
       "id": "MW5Z8JdryNkf",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -692,7 +692,7 @@
         "  display(my_button,out)\n"
       ],
       "id": "QB_TiYyCDd1l",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -727,7 +727,7 @@
         "plt.show()"
       ],
       "id": "fb99ab40",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -816,7 +816,7 @@
         "    return RGB"
       ],
       "id": "9972356a",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -849,7 +849,7 @@
         "plt.show()"
       ],
       "id": "1528cc65",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -992,7 +992,7 @@
         "  return YIQ_mod"
       ],
       "id": "d46ef792",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1058,7 +1058,7 @@
         "widgets.interactive(mod_sat_lum, alpha=(0, 3, 0.1), beta=(0, 3, 0.1), YIQ=widgets.fixed(YIQ), graph=widgets.fixed(1), full_path=widgets.fixed(path_save))  "
       ],
       "id": "mhodyNRkcTTU",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1145,7 +1145,7 @@
         "plt.show()"
       ],
       "id": "9d8306d2",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1167,7 +1167,7 @@
         "id": "ziiouDFahlni"
       },
       "source": [
-        "Se observs como las funciones codificadas cumplen su rol correctamente, dado que al colocar un valor menor a 1 en alfa se observa una disminución en la luminosidad de la imagen. Mientras que al colocar un valor cercano a 2, observamos como aumenta el brillo o la claridad de la imagen a tal punto de llegar a \"quemar\" la imagen."
+        "Se observa como las funciones codificadas cumplen su rol correctamente, dado que al colocar un valor menor a 1 en alfa se observa una disminución en la luminosidad de la imagen. Mientras que al colocar un valor cercano a 2, observamos como aumenta el brillo o la claridad de la imagen a tal punto de llegar a \"quemar\" la imagen."
       ],
       "id": "ziiouDFahlni"
     },
@@ -1223,7 +1223,7 @@
         "plt.show()"
       ],
       "id": "6ff2da88",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
