--- a/TP2/parte_1_rgb_to_yiq.ipynb
+++ b/TP2/parte_1_rgb_to_yiq.ipynb
@@ -247,7 +247,7 @@
         "from IPython.display import display"
       ],
       "id": "856c924b",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -274,7 +274,7 @@
         "drive.mount('/content/drive')"
       ],
       "id": "MW5Z8JdryNkf",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,7 +480,7 @@
         "  return YIQ_mod"
       ],
       "id": "QB_TiYyCDd1l",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -497,11 +497,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "4PJg_xA1Dy29",
-        "outputId": "bf8537bb-2ca8-490f-8e92-296c6093d43b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 657
-        }
+        },
+        "outputId": "bf8537bb-2ca8-490f-8e92-296c6093d43b"
       },
       "source": [
         "#@title Seleccione la imagen a analizar: { run: \"auto\" }\n",
@@ -512,17 +512,17 @@
         "dropdown = 'Loro' #@param [\"Isla\",\"Loro\",\"Playa\"]\n",
         "\n",
         "if dropdown=='Isla':\n",
-        "  image = image = imageio.imread(isla_path)\n",
+        "  image = imageio.imread(isla_path)\n",
         "if dropdown=='Loro':\n",
-        "  image = image = imageio.imread(loro_path)\n",
+        "  image = imageio.imread(loro_path)\n",
         "if dropdown=='Playa':\n",
-        "  image = image = imageio.imread(playa_path)\n",
+        "  image = imageio.imread(playa_path)\n",
         "\n",
         "print(f\"Tamaño de la imagen:{image.shape} (Dado que es una imagen RGB tenemos 3 canales, uno para cada color)\\n\") \n",
         "print_image(image,'Imagen RGB')"
       ],
       "id": "4PJg_xA1Dy29",
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -583,7 +583,7 @@
         "print_image(RGB_out,'Imagen post-procesada')"
       ],
       "id": "1528cc65",
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -626,7 +626,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "JOofBvG6I5oQ",
-        "outputId": "83c907d7-9974-47a3-a4f0-df200d95d0c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 518,
@@ -637,7 +636,8 @@
             "32671a0e95db4c03bfde96164c94fbb9",
             "48183b2f51a2448a9157392ad1c3fb22"
           ]
-        }
+        },
+        "outputId": "83c907d7-9974-47a3-a4f0-df200d95d0c0"
       },
       "source": [
         "#@title Seleccione el valor de alfa (luminancia) y beta (saturación) para observar el cambio en la imagen seleccionada anteriormente. { run: \"auto\" }\n",
@@ -660,7 +660,7 @@
         "save_button(RGB_mod,full_path)"
       ],
       "id": "JOofBvG6I5oQ",
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -765,7 +765,7 @@
         "plt.show()"
       ],
       "id": "9d8306d2",
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -843,7 +843,7 @@
         "plt.show()"
       ],
       "id": "6ff2da88",
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
