--- a/TP7/Procesamiento_Morfológico.ipynb
+++ b/TP7/Procesamiento_Morfológico.ipynb
@@ -6,7 +6,7 @@
       "name": "TP7 - Procesamiento_Morfológico.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNST55uy1x+LWofyik8E9zp",
+      "authorship_tag": "ABX9TyMK0WusFvBpfrtr3BAQStNZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -989,9 +989,9 @@
       "source": [
         "## 5. Conclusiones\n",
         "\n",
-        "* Dada la naturaleza de la operación de erosión y dilatación (tomar el pixel de mínimo o máximo valor respectivamente del elemento estructurante) como dicha operación invierte su resultado si la zona de la imagen tiene fondo negro y letras blancas o fondo blanco y letras negras.\n",
+        "* Dada la naturaleza de la operación de erosión y dilatación (tomar el pixel de mínimo o máximo valor respectivamente del elemento estructurante) dicha operación invierte su resultado si la zona de la imagen tiene fondo negro y letras blancas o fondo blanco y letras negras.\n",
         "\n",
-        "* Se observa un efecto mucho mas pronunciado o notorio al emplear un elementos estructurante de mayor tamaño (5x5 o 7x7) dado que dicho elemento tiene una mayor cantidad de píxeles en su interior.\n",
+        "* Se observa un efecto mucho mas pronunciado o notorio al emplear un elemento estructurante de mayor tamaño (5x5 o 7x7) dado que dicho elemento considera una mayor cantidad de píxeles en su interior.\n",
         "\n",
         "* Se puede apreciar como las operaciones de borde interior y borde exterior logran resaltar los bordes la imagen, en especial los de las letras de la patente.\n",
         "\n",
